@startuml
!include color.inc

商品.商品 "1" -- "1" カート.カート内商品
商品.商品 "1" - "1" 注文.注文明細
商品.商品 "1" - "n" 商品.商品画像
認証.ユーザ "1" ---- "1" カート.カート
認証.ユーザ "1" ---- "n" 注文.注文
商品カテゴリ.大カテゴリ "1" -- "n" 商品.商品
カート.カート "1" -- "1" 注文.注文
特集.特集 "1" - "1" 特集.タイトル画像

 namespace 特集 {
   class 特集
   class タイトル画像
 }
 特集.特集 : 特集ID

 namespace 商品 {
   class 商品
   class 商品画像
 }
 商品.商品 : 商品ID
 商品.商品 : カテゴリID
 商品.商品 : レンタル料金

 namespace 商品カテゴリ {
   class 大カテゴリ
   class 小カテゴリ
 }
 商品カテゴリ.大カテゴリ : 商品カテゴリID
 商品カテゴリ.大カテゴリ "1" *- "n" 商品カテゴリ.小カテゴリ

 namespace カート {
   class カート
   class カート内商品
 }
 カート.カート : カートID
 カート.カート : ユーザID
 カート.カート内商品 : カート内商品ID
 カート.カート "1" *- "n" カート.カート内商品

 namespace 注文 {
   class 注文
   class 注文明細
 }
 注文.注文 : 注文ID
 注文.注文 : ユーザID
 注文.注文明細 : 商品ID
 注文.注文 "1" *- "n" 注文.注文明細

 namespace 認証 {
   class ユーザ
   class SNSアカウント
 }
 認証.ユーザ : ユーザID
 認証.ユーザ "1" *- "n" 認証.SNSアカウント
@enduml